base/monitoring/networkpolicies/egress-prometheus.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus
  namespace: monitoring
spec:
  selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'alertmanager'
        ports:
          - 9093
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'argocd'
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'application-controller'
        ports:
          - 8082
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'k8up'
        selector: app.kubernetes.io/instance == 'k8up'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'prometheus-pushgateway'
        ports:
          - 9091
    - action: Allow
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == 'grafana'
        ports:
          - 3000
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'kube-prometheus-stack-operator'
        ports:
          - 10250
    - action: Allow
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == 'kube-state-metrics'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'kube-system'
        selector: k8s-app == 'kube-dns'
        ports:
          - 9153
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 9100
          - 10250
