base/monitoring/networkpolicies/ingress-pushgateway.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-pushgateway
  namespace: monitoring
spec:
  selector: app == 'prometheus-pushgateway'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 9091
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: job == 'gitlab-backup-mirror'
      destination:
        ports:
          - 9091
    - action: Allow
      protocol: TCP
      source:
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
      destination:
        ports:
          - 9091
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: k8up == 'backup-enabled'
        selector: has(job-name)
      destination:
        ports:
          - 9091
